chore: add devDependencies

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/CoopusDev/Mraph.js/issues"
   },
-  "homepage": "https://github.com/CoopusDev/Mraph.js#readme"
+  "homepage": "https://github.com/CoopusDev/Mraph.js#readme",
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
