--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "mraph",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./src/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CoopusDev/Mraph.js.git"
-  },
-  "author": "CoopusDev",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/CoopusDev/Mraph.js/issues"
-  },
-  "homepage": "https://github.com/CoopusDev/Mraph.js#readme",
-  "devDependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
-  }
+    "name": "mraph",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "types": "types.d.ts",
+    "main": "src/mraph.js",
+    "scripts": {
+        "prepare": "husky install",
+        "precommit": "npm run lint && npm run types",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint src --fix",
+        "types": "tsc"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/CoopusDev/Mraph-js.git"
+    },
+    "author": "CoppusDev",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/CoopusDev/Mraph-js/issues"
+    },
+    "homepage": "https://github.com/CoopusDev/Mraph-js#readme",
+    "devDependencies": {
+        "eslint": "^8.39.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.3",
+        "jsdoc": "^4.0.2",
+        "typescript": "^5.0.4"
+    }
 }
