--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,7 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "rules": {}
+    "rules": {
+        "prettier/prettier": "error"
+    }
 }
