--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mraph",
-    "version": "1.0.2-alpha.1",
+    "version": "0.0.1-alpha.1",
     "description": "",
     "type": "module",
     "types": "types.d.ts",
@@ -16,18 +16,19 @@
         "type": "git",
         "url": "git+https://github.com/SeiyaCooper/Mraph.js.git"
     },
-    "author": "CoppusDev",
-    "license": "MIT",
+    "author": "SeiyaCooper",
+    "license": "Apache-2.0",
     "bugs": {
         "url": "https://github.com/SeiyaCooper/Mraph.js/issues"
     },
     "homepage": "https://github.com/SeiyaCooper/Mraph.js#readme",
     "devDependencies": {
-        "eslint": "^8.47.0",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint": "^8.56.0",
+        "eslint-plugin-prettier": "^5.1.2",
         "husky": "^8.0.3",
         "jest": "^29.6.2",
         "jsdoc": "^4.0.2",
+        "prettier": "^3.1.1",
         "typescript": "^5.0.4"
     },
     "files": [
