--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "precommit": "npm run lint && npm run types && npm run test && git add .",
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "lint": "eslint src --fix",
-        "types": "tsc"
+        "types": "tsc",
+        "site:dev": "astro dev",
+        "site:build": "astro build"
     },
     "repository": {
         "type": "git",
@@ -23,13 +25,15 @@
     },
     "homepage": "https://github.com/SeiyaCooper/Mraph.js#readme",
     "devDependencies": {
+        "astro": "^4.3.2",
         "eslint": "^8.56.0",
         "eslint-plugin-prettier": "^5.1.2",
+        "github-markdown-css": "^5.5.1",
         "husky": "^8.0.3",
         "jest": "^29.6.2",
         "jsdoc": "^4.0.2",
         "prettier": "^3.1.1",
-        "typescript": "^5.0.4"
+        "typescript": "^5.3.3"
     },
     "files": [
         "src",
