--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "homepage": "https://github.com/SeiyaCooper/Mraph.js#readme",
     "devDependencies": {
+        "@fontsource/poppins": "^5.0.8",
         "astro": "^4.3.2",
         "eslint": "^8.56.0",
         "eslint-plugin-prettier": "^5.1.2",
