--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "husky": "^8.0.3",
         "jest": "^29.6.2",
         "jsdoc": "^4.0.2",
-        "prettier": "^3.1.1",
+        "prettier": "^3.2.5",
+        "prettier-plugin-glsl": "^0.1.3",
         "typescript": "^5.3.3"
     },
     "files": [
