--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -38,26 +38,16 @@ jobs:
             - name: Detect package manager
               id: detect-package-manager
               run: |
-                  if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-                    echo "manager=yarn" >> $GITHUB_OUTPUT
-                    echo "command=install" >> $GITHUB_OUTPUT
-                    echo "runner=yarn" >> $GITHUB_OUTPUT
-                    exit 0
-                  elif [ -f "${{ github.workspace }}/package.json" ]; then
-                    echo "manager=npm" >> $GITHUB_OUTPUT
-                    echo "command=ci" >> $GITHUB_OUTPUT
-                    echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-                    exit 0
-                  else
-                    echo "Unable to determine package manager"
-                    exit 1
-                  fi
+                  echo "manager=yarn" >> $GITHUB_OUTPUT
+                  echo "command=install" >> $GITHUB_OUTPUT
+                  echo "runner=yarn" >> $GITHUB_OUTPUT
+                  exit 0
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
                   node-version: "20"
                   cache: ${{ steps.detect-package-manager.outputs.manager }}
-                  cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
+                  cache-dependency-path: ${{ env.BUILD_PATH }}/yarn.lock
             - name: Setup Pages
               id: pages
               uses: actions/configure-pages@v4
