--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
     "name": "mraph",
-    "version": "0.0.1-dev.4",
+    "version": "0.0.1-dev.5",
     "description": "",
     "type": "module",
     "types": "types.d.ts",
     "main": "src/mraph.js",
     "scripts": {
-        "prepare": "husky install",
-        "precommit": "npm run lint && npm run types && npm run test && git add .",
+        "prepare": "husky install && yarn build",
+        "precommit": "yarn lint && yarn types && yarn test && git add .",
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "lint": "eslint src --fix",
         "types": "tsc",
         "site:dev": "astro dev",
-        "site:build": "astro build"
+        "site:build": "astro build",
+        "build": "vite build"
     },
     "repository": {
         "type": "git",
@@ -35,7 +36,8 @@
         "jsdoc": "^4.0.2",
         "prettier": "^3.2.5",
         "prettier-plugin-glsl": "^0.1.3",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vite": "^5.2.8"
     },
     "files": [
         "src",
