--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "mraph",
-    "version": "0.0.1-dev.5",
+    "version": "0.0.1-dev.6",
     "description": "",
     "type": "module",
     "types": "types.d.ts",
-    "main": "src/mraph.js",
+    "main": "dist/mraph.js",
     "scripts": {
         "prepare": "husky install && yarn build",
         "precommit": "yarn lint && yarn types && yarn test && git add .",
@@ -40,7 +40,7 @@
         "vite": "^5.2.8"
     },
     "files": [
-        "src",
+        "dist",
         "types.d.ts"
     ]
 }
