feat: add Tail chore: remove jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
         "declaration": true,
         "emitDeclarationOnly": true,
         "outFile": "types.d.ts",
-        "baseUrl": "./src/"
+        "baseUrl": "./src/",
+        "target": "ES6",
+        "moduleResolution": "Node"
     }
 }
