--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "main": "dist/mraph.js",
     "scripts": {
         "prepare": "husky install && yarn build",
-        "precommit": "yarn lint && yarn types && yarn test && git add .",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "precommit": "yarn lint && yarn types && git add .",
         "lint": "eslint src --fix",
         "types": "tsc",
         "site:dev": "astro dev",
@@ -32,7 +31,6 @@
         "eslint-plugin-prettier": "^5.1.2",
         "github-markdown-css": "^5.5.1",
         "husky": "^8.0.3",
-        "jest": "^29.6.2",
         "jsdoc": "^4.0.2",
         "prettier": "^3.2.5",
         "prettier-plugin-glsl": "^0.1.3",
