fix gh workflow

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -63,9 +63,7 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: |
-                      ${{ env.BUILD_PATH }}/dist
-                      ${{ env.BUILD_PATH }}/logo.png
+                  path: ${{ env.BUILD_PATH }}/
 
     deploy:
         environment:
