test gh workflow

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -60,10 +60,13 @@ jobs:
                     --site "${{ steps.pages.outputs.origin }}" \
                     --base "${{ steps.pages.outputs.base_path }}"
               working-directory: ${{ env.BUILD_PATH }}
+            - name: Upload custom files
+              run: | 
+                  cp ${{ env.BUILD_PATH }}/logo.png ${{ env.BUILD_PATH }}/dist/
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: ${{ env.BUILD_PATH }}/
+                  path: ${{ env.BUILD_PATH }}/dist
 
     deploy:
         environment:
