feat: add Material.diffuseTexture

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
     "tabWidth": 4,
-    "printWidth": 80,
+    "printWidth": 120,
     "trailingComma": "es5",
     "plugins": ["prettier-plugin-glsl"],
-    "overrides": [
-        { "files": ["*.frag"], "options": { "parser": "glsl-parser" } }
-    ]
+    "overrides": [{ "files": ["*.frag"], "options": { "parser": "glsl-parser" } }]
 }
