--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mraph",
-    "version": "0.0.1",
+    "version": "0.0.2-dev.1",
     "description": "",
     "type": "module",
     "types": "types.d.ts",
